Letter-spacing fixes

--- a/frontend/src/components/RoadmapSidebar.module.scss
+++ b/frontend/src/components/RoadmapSidebar.module.scss
@@ -11,7 +11,7 @@
   font-family: Anonymous Pro;
   text-transform: uppercase;
   font-weight: 700;
-  letter-spacing: 2px;
+  letter-spacing: 0.2em;
   font-size: 12px;
   color: $COLOR_BLACK100;
   border-left: 5px solid white;
